--- a/final/pkstyles/pokevgc.css
+++ b/final/pkstyles/pokevgc.css
@@ -85,10 +85,8 @@ Media Queries Start Here
 @media only screen and (max-width: 1200px) {
     #gridcontainer {
         /*Redefined Grid layout*/
-        display: grid;
         grid-template-columns: 0.2fr repeat(2, 1fr) 0.2fr;
         grid-template-rows: repeat(6, max-content);
-        grid-gap: 1em;
         grid-template-areas:
             ". vgc vgc ."
             ". im1 im1 ."
@@ -102,10 +100,8 @@ Media Queries Start Here
 @media only screen and (max-width: 1130px) {
     #gridcontainer {
         /*Redefined Grid layout*/
-        display: grid;
         grid-template-columns: 0.01fr repeat(1, 1fr) 0.01fr;
         grid-template-rows: repeat(7, min-content);
-        grid-gap: 1em;
         grid-template-areas:
             ". vgc ."
             ". im1 ."
